commit_name: detail

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,3 +28,11 @@ small,
 .text-center {
   text-align: center;
 }
+
+.text-upper {
+  text-transform: uppercase;
+}
+
+.ls-7 {
+  letter-spacing: 7px;
+}
