--- a/sass/utilities/_flex.scss
+++ b/sass/utilities/_flex.scss
@@ -1,37 +1,15 @@
 @use '../abstracts/' as *;
 
 /*********** FLEX ************/
-%flex {
-  display: flex;
-  gap: var(--gap, var(--spacer));
-}
-
-@mixin flex($align: null, $justify: null, $flex-direction: null, $wrap: null) {
-  @extend %flex;
-  align-items: $align;
-  justify-content: $justify;
-  flex-direction: $flex-direction;
-  flex-wrap: $wrap;
-}
-
 .flex {
-  @extend %flex;
+  display: flex;
+  gap: var(--gap, 1rem);
 }
 
-.split {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  max-width: var(--width, 80rem);
+.a-center {
+  align-items: center;
+}
 
-  @media (min-width: 60em) {
-    flex-direction: row;
-  }
-
-  & > * + * {
-    margin: var(--spacer) 0 0 0;
-    @media (min-width: 60em) {
-      margin: 0 0 0 var(--spacer);
-    }
-  }
+.sp-btw {
+  justify-content: space-between;
 }
